2002-11-28  Pavel Roskin  <proski@gnu.org>

	* sldisply.c: Fix for the previous patch.  Only swap colors if
	setf and setb are not empty.
	Reported by Andras Barthazi <andras@barthazi.hu>

2002-10-25  Pavel Roskin  <proski@gnu.org>

	* sldisply.c: Patch to swap blue and red colors for setf/setb
	capabilities.  Needed on QNX Neutrino.
	Reported by Pavel Shirshov <pavelsh@mail.ru>

2002-10-07  Pavel Roskin  <proski@gnu.org>

	* include/jdmacros.h: Define SLMEMSET and SLMEMCPY
	unconditionally, use macros with arguments.
	* include/_slang.h: Make it clear which parts are disabled
	for compatibility with glib.
	* include/slinclud.h: Include malloc.h only if STDC_HEADERS is
	not defined.

2002-10-07  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* sldisply.c (Color_Def_Type): Make const.
	* slsmg.c (Fake_Alt_Char_Pairs): Likewise.
	* sltermin.c (Tgetstr_Map_Type): Likewise.
	* slutty.c (Baud_Rate_Type): Likewise.

2002-10-07  Pavel Roskin  <proski@gnu.org>

	Update to S-Lang 1.4.5.  Move include files to "include"
	directory to avoid the need to rename slang.h.
	* Makefile.am: Adjust file list.  Add "-Iinclude" to the
	compiler flags.
	* include/jdmacros.h: Rewrite to use glib.
	* slmisc.c: Trim to include only needed functions.

2002-09-18  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* slerr.c (SLang_doerror): Use error parameter.  Eliminate
	err[] array.

2002-08-21  Pavel Roskin  <proski@gnu.org>

	* slsmg.c (Fake_Alt_Char_Pairs): Update from slang-1.4.5.  This
	fixes the MC logo in the help screen.

2002-01-21  Pavel Roskin  <proski@gnu.org>

	* slvideo.c: Include _slang.h, not slang.h.

	* slos2tty.c: Remove since OS/2 is no longer supported.
	* Makefile.am (EXTRASRC): Remove slos2tty.c.

2001-12-21  Pavel Roskin  <proski@gnu.org>

	* _slang.h: Include slang-mc.h.
	* slang-mc.h: Add protection against using with system installed
	S-Lang library.
	* sl*.c: Only include _slang.h, but not slang.h to avoid making
	symlinks.

2001-09-04  Pavel Roskin  <proski@gnu.org>
